s5_kubernetes_network/http-go-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-go-np
spec:
  type: NodePort
  selector:
    app: http-go
  ports:
    - port: 80 # 서비스 포트
      targetPort: 8080 # 컨테이너의 포트
      nodePort: 30001 # 노드의 포트
