s5_kubernetes_network/http-go-session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-go-session-affinity
spec:
  sessionAffinity: ClientIP
  selector:
    app: http-go
  ports:
    - protocol: TCP
      port: 80 # 서비스할 포트 (X의 포트)
      targetPort: 8080 # 컨테이너의 포트
